--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <li class="benefits-list-item">
               <div class="benefits-img">
                 <svg class="benefits-icon" width="64px" height="64px">
-                  <use href="./icons.svg#antenna"></use>
+                  <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
               <h3 class="sub-title">Strategy</h3>
@@ -88,7 +88,7 @@
             <li class="benefits-list-item">
               <div class="benefits-img">
                 <svg class="benefits-icon" width="64px" height="64px">
-                  <use href="./icons.svg#clock"></use>
+                  <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="sub-title">Punctuality</h3>
@@ -100,7 +100,7 @@
             <li class="benefits-list-item">
               <div class="benefits-img">
                 <svg class="benefits-icon" width="64px" height="64px">
-                  <use href="./icons.svg#diagram"></use>
+                  <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
               <h3 class="sub-title">Diligence</h3>
@@ -112,7 +112,7 @@
             <li class="benefits-list-item">
               <div class="benefits-img">
                 <svg class="benefits-icon" width="64px" height="64px">
-                  <use href="./icons.svg#astronaut"></use>
+                  <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="sub-title">Technologies</h3>
@@ -179,7 +179,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -190,7 +190,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -201,7 +201,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -212,7 +212,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -237,7 +237,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -248,7 +248,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -259,7 +259,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -270,7 +270,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -295,7 +295,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -306,7 +306,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -317,7 +317,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -328,7 +328,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -353,7 +353,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -364,7 +364,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -375,7 +375,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -386,7 +386,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="./icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -403,42 +403,42 @@
           <li class="customers-list-item">
             <a href="" class="customers-logo">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./icons.svg#logo-1"></use>
+                <use href="./images/icons.svg#logo-1"></use>
               </svg>
             </a>
           </li>
           <li class="customers-list-item">
             <a href="" class="customers-logo">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./icons.svg#logo-2"></use>
+                <use href="./images/icons.svg#logo-2"></use>
               </svg>
             </a>
           </li>
           <li class="customers-list-item">
             <a href="" class="customers-logo">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./icons.svg#logo-3"></use>
+                <use href="./images/icons.svg#logo-3"></use>
               </svg>
             </a>
           </li>
           <li class="customers-list-item">
             <a href="" class="customers-logo">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./icons.svg#logo-4"></use>
+                <use href="./images/icons.svg#logo-4"></use>
               </svg>
             </a>
           </li>
           <li class="customers-list-item">
             <a href="" class="customers-logo">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./icons.svg#logo-5"></use>
+                <use href="./images/icons.svg#logo-5"></use>
               </svg>
             </a>
           </li>
           <li class="customers-list-item">
             <a href="" class="customers-logo">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./icons.svg#logo-6"></use>
+                <use href="./images/icons.svg#logo-6"></use>
               </svg>
             </a>
           </li>
@@ -463,28 +463,28 @@
             <li class="footer-socials-list-item">
               <a href="instagram.com">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./icons.svg#instagram"></use>
+                  <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-list-item">
               <a href="instagram.com">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./icons.svg#twitter"></use>
+                  <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-list-item">
               <a href="instagram.com">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./icons.svg#facebook"></use>
+                  <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-list-item">
               <a href="instagram.com">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./icons.svg#linkedin"></use>
+                  <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -492,13 +492,87 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button class="modal-btn" data-modal-close>
           <svg class="modal-btn-icon" width="8" height="8">
-            <use href="./icons.svg#close-black"></use>
+            <use href="./images/icons.svg#close-black"></use>
           </svg>
         </button>
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form" name="order_form">
+          <label class="modal-label" for="order_user_name">Name</label>
+          <div class="modal-field">
+            <input
+              class="modal-input"
+              type="text"
+              name="order_user_name"
+              id="order_user_name"
+            />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#name"></use>
+            </svg>
+          </div>
+          <label class="modal-label" for="order_user_phone">Phone</label>
+          <div class="modal-field">
+            <input
+              class="modal-input"
+              type="tel"
+              name="order_user_phone"
+              id="order_user_phone"
+            />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#phone"></use>
+            </svg>
+          </div>
+          <label class="modal-label" for="order_user_email">Email</label>
+          <div class="modal-field">
+            <input
+              class="modal-input"
+              type="email"
+              name="order_user_email"
+              id="order_user_email"
+            />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#email"></use>
+            </svg>
+          </div>
+
+          <div class="modal-coment">
+            <label class="modal-label" for="order_comment"> Comment</label>
+            <textarea
+              class="modal-coment-field"
+              name="order_comment"
+              id="order_comment"
+              rows="4"
+              placeholder="Enter text"
+            ></textarea>
+          </div>
+
+          <label class="modal-agreement">
+            <input class="modal-agreement-input" type="checkbox" />
+
+            <span class="modal-checkbox">
+              <svg class="modal-checkbox-icon" width="10" height="10">
+                <use href="./images/icons.svg#check"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the
+            <a
+              class="modal-agreement-link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Privacy Policy
+            </a>
+          </label>
+
+          <button class="modal-button-send" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
