--- a/portfolio.html
+++ b/portfolio.html
@@ -299,28 +299,28 @@
             <li class="footer-socials-list-item">
               <a href="instagram.com">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./icons.svg#instagram"></use>
+                  <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-list-item">
               <a href="instagram.com">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./icons.svg#twitter"></use>
+                  <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-list-item">
               <a href="instagram.com">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./icons.svg#facebook"></use>
+                  <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-list-item">
               <a href="instagram.com">
                 <svg class="footer-socials-icon" width="24" height="24">
-                  <use href="./icons.svg#linkedin"></use>
+                  <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
