--- a/portfolio.html
+++ b/portfolio.html
@@ -326,6 +326,25 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-container">
+          <p class="subscribe-caption">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="subcribe-label">
+              <input
+                class="subscribe-imput"
+                type="email"
+                name="subscribe-imput"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe-btn">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
