--- a/portfolio.html
+++ b/portfolio.html
@@ -331,9 +331,9 @@
           <form class="subscribe-form">
             <label class="subcribe-label">
               <input
-                class="subscribe-imput"
+                class="subscribe-input"
                 type="email"
-                name="subscribe-imput"
+                name="subscribe-input"
                 placeholder="E-mail"
               />
             </label>
