--- a/index.html
+++ b/index.html
@@ -536,72 +536,72 @@
                 <use href="./images/icons.svg#name"></use>
               </svg>
             </div>
-            <div class="modal-container">
-              <label class="modal-label" for="user_phone">Phone</label>
-              <div class="modal-field">
-                <input
-                  class="modal-input"
-                  type="tel"
-                  name="order_user_phone"
-                  id="user_phone"
-                />
-                <svg class="modal-icon" width="18" height="24">
-                  <use href="./images/icons.svg#phone"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="modal-container">
-              <label class="modal-label" for="user_email">Email</label>
-              <div class="modal-field">
-                <input
-                  class="modal-input"
-                  type="email"
-                  name="order_user_email"
-                  id="user_email"
-                />
-                <svg class="modal-icon" width="18" height="24">
-                  <use href="./images/icons.svg#email"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="modal-comment">
-              <label class="modal-label" for="user-comment"> Comment</label>
-              <textarea
-                class="modal-comment-field"
-                name="user-comment"
-                id="user-comment"
-                rows="4"
-                placeholder="Text input"
-              >
-              </textarea>
-            </div>
-            <div class="modal-agreement-container">
-              <input
-                id="user-privacy"
-                type="checkbox"
-                value="true"
-                name="user-privacy"
-                class="modal-agreement-input visually-hidden"
-              />
-              <label class="modal-agreement" for="user-privacy">
-                <span class="modal-checkbox">
-                  <svg class="modal-checkbox-icon" width="10" height="8">
-                    <use href="./images/icons.svg#check"></use>
-                  </svg>
-                </span>
-                I accept the terms and conditions of the
-                <a
-                  class="modal-agreement-link"
-                  href="#"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  Privacy Policy
-                </a>
-              </label>
-            </div>
-            <button class="modal-button-send" type="submit">Send</button>
           </div>
+          <div class="modal-container">
+            <label class="modal-label" for="user-phone">Phone</label>
+            <div class="modal-field">
+              <input
+                class="modal-input"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-container">
+            <label class="modal-label" for="user-email">Email</label>
+            <div class="modal-field">
+              <input
+                class="modal-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-comment">
+            <label class="modal-label" for="user-comment"> Comment</label>
+            <textarea
+              class="modal-comment-field"
+              name="user-comment"
+              id="user-comment"
+              rows="4"
+              placeholder="Text input"
+            >
+            </textarea>
+          </div>
+          <div class="modal-agreement-container">
+            <input
+              id="user-privacy"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+              class="modal-agreement-input visually-hidden"
+            />
+            <label class="modal-agreement" for="user-privacy">
+              <span class="modal-checkbox">
+                <svg class="modal-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a
+                class="modal-agreement-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Privacy Policy
+              </a>
+            </label>
+          </div>
+          <button class="modal-button-send" type="submit">Send</button>
         </form>
       </div>
     </div>
