--- a/index.html
+++ b/index.html
@@ -573,8 +573,7 @@
               id="user-comment"
               rows="4"
               placeholder="Text input"
-            >
-            </textarea>
+            ></textarea>
           </div>
           <div class="modal-agreement-container">
             <input
