--- a/portfolio.html
+++ b/portfolio.html
@@ -337,7 +337,7 @@
                 placeholder="E-mail"
               />
             </label>
-            <button class="subscribe-btn">
+            <button class="subscribe-btn" type="submit">
               Subscribe
               <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#subscribe"></use>
